@@ -1,6 +1,6 @@
 {
   "name": "simp-fips",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "author": "SIMP Team",
   "summary": "A SIMP module for managing FIPS",
   "license": "Apache-2.0",
@@ -14,22 +14,22 @@
   "dependencies": [
     {
       "name": "simp/simplib",
-      "version_requirement": ">= 4.7.0 < 5.0.0"
+      "version_requirement": ">= 4.9.0 < 5.0.0"
     },
     {
       "name": "puppetlabs/stdlib",
-      "version_requirement": ">= 8.0.0 < 9.0.0"
+      "version_requirement": ">= 8.0.0 < 10.0.0"
     },
     {
-      "name": "herculesteam/augeasproviders_grub",
-      "version_requirement": ">= 2.3.1 < 4.0.0"
+      "name": "puppet/augeasproviders_grub",
+      "version_requirement": ">= 3.1.0 < 6.0.0"
     }
   ],
   "simp": {
     "optional_dependencies": [
       {
         "name": "simp/crypto_policy",
-        "version_requirement": ">= 0.1.4 < 2.0.0"
+        "version_requirement": ">= 0.1.4 < 1.0.0"
       }
     ]
   },
@@ -78,7 +78,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 6.22.1 < 8.0.0"
+      "version_requirement": ">= 7.0.0 < 9.0.0"
     }
   ]
 }
